added two variants of flip cards and added two examples

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,33 @@
+:host {
+  display: block; }
+
 .flip-card {
-  height: 100px;
-  width: 100px;
-  background-color: red; }
+  position: relative;
+  perspective: 100rem;
+  height: var(--flip-card-height, 100px); }
+  .flip-card__side {
+    height: var(--flip-card-height, 100px);
+    transition: all 0.8s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 4px;
+    overflow: hidden;
+    box-shadow: var(--flip-card-box-shadow, 0 15px 40px rgba(0, 0, 0, 0.15)); }
+    .flip-card__side--front {
+      background-color: var(--flip-card-background-color-front, white); }
+    .flip-card__side--back {
+      background-color: var(--flip-card-background-color-back, white);
+      transform: rotateY(180deg); }
+  .flip-card:hover .flip-card__side--front.hover {
+    transform: rotateY(-180deg); }
+  .flip-card:hover .flip-card__side--back.hover {
+    transform: rotateY(0); }
+
+.clicked--front {
+  transform: rotateY(-180deg); }
+
+.clicked--back {
+  transform: rotateY(0); }
