📝 added documentation and additional css variables

--- a/src/style.scss
+++ b/src/style.scss
@@ -9,13 +9,13 @@
 
   &__side {
     height: var(--flip-card-height, 100px);
-    transition: all 0.8s ease;
+    transition: all var(--flip-card-transition-duration, 800ms) ease;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     backface-visibility: hidden;
-    border-radius: 4px;
+    border-radius: var(--flip-card-border-radius, 4px);
     overflow: hidden;
     box-shadow: var(--flip-card-box-shadow, 0 15px 40px rgba(0, 0, 0, 0.15));
 
